Ensuring keeps auth context is kept with request for custom process